bug fixes to Orders
